--- a/api/jobs/models/jobs.settings.json
+++ b/api/jobs/models/jobs.settings.json
@@ -15,6 +15,13 @@
     },
     "company": {
       "type": "string"
+    },
+    "type": {
+      "type": "enumeration",
+      "enum": [
+        "Vollzeit",
+        "Teilzeit"
+      ]
     }
   }
 }
