--- a/api/jobs/models/jobs.settings.json
+++ b/api/jobs/models/jobs.settings.json
@@ -22,6 +22,11 @@
         "Vollzeit",
         "Teilzeit"
       ]
+    },
+    "jobDescription": {
+      "type": "richtext",
+      "maxLength": 1000,
+      "required": true
     }
   }
 }
