added lang field for posts

--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -51,6 +51,13 @@
       "repeatable": false,
       "component": "images.post-image",
       "required": false
+    },
+    "lang": {
+      "type": "enumeration",
+      "enum": [
+        "de",
+        "en"
+      ]
     }
   }
 }
