--- a/api/tag/models/tag.settings.json
+++ b/api/tag/models/tag.settings.json
@@ -23,9 +23,10 @@
       "required": true,
       "unique": true
     },
-    "post": {
+    "posts": {
+      "collection": "post",
       "via": "tags",
-      "model": "post"
+      "dominant": true
     }
   }
 }
