author socials component

--- a/api/author/models/author.settings.json
+++ b/api/author/models/author.settings.json
@@ -27,17 +27,10 @@
       "plugin": "upload",
       "required": false
     },
-    "github": {
-      "type": "string"
-    },
-    "linkedin": {
-      "type": "string"
-    },
-    "twitter": {
-      "type": "string"
-    },
-    "instagram": {
-      "type": "string"
+    "socials": {
+      "type": "component",
+      "repeatable": false,
+      "component": "author.author-socials"
     }
   }
 }
