--- a/api/author/models/author.settings.json
+++ b/api/author/models/author.settings.json
@@ -29,8 +29,8 @@
     },
     "socials": {
       "type": "component",
-      "repeatable": false,
-      "component": "author.author-socials"
+      "repeatable": true,
+      "component": "socials.author-socials"
     }
   }
 }
