--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "strapi-utils": "3.1.4"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "Max Dietrich"
   },
   "strapi": {
     "uuid": "9cbf36d8-5182-4491-89e4-5d8d8d7559bd"
