--- a/api/page/models/page.settings.json
+++ b/api/page/models/page.settings.json
@@ -20,6 +20,10 @@
     "date": {
       "type": "date",
       "required": true
+    },
+    "slug": {
+      "type": "uid",
+      "targetField": "title"
     }
   }
 }
