--- a/api/tag/models/tag.settings.json
+++ b/api/tag/models/tag.settings.json
@@ -27,6 +27,10 @@
       "collection": "post",
       "via": "tags",
       "dominant": true
+    },
+    "slug": {
+      "type": "uid",
+      "targetField": "name"
     }
   }
 }
