--- a/api/tag/models/tag.settings.json
+++ b/api/tag/models/tag.settings.json
@@ -30,7 +30,8 @@
     },
     "slug": {
       "type": "uid",
-      "targetField": "name"
+      "targetField": "name",
+      "required": true
     }
   }
 }
