--- a/api/subscribers/models/subscribers.settings.json
+++ b/api/subscribers/models/subscribers.settings.json
@@ -13,7 +13,8 @@
       "type": "string"
     },
     "email": {
-      "type": "string"
+      "type": "string",
+      "unique": true
     }
   }
 }
