--- a/api/tag/models/tag.settings.json
+++ b/api/tag/models/tag.settings.json
@@ -16,7 +16,9 @@
     },
     "description": {
       "type": "text",
-      "required": true
+      "required": true,
+      "maxLength": 160,
+      "minLength": 50
     },
     "color": {
       "type": "string",
@@ -24,8 +26,8 @@
       "unique": true
     },
     "posts": {
-      "via": "tags",
       "collection": "post",
+      "via": "tags",
       "dominant": true
     },
     "slug": {
