description for pages

--- a/api/page/models/page.settings.json
+++ b/api/page/models/page.settings.json
@@ -21,6 +21,11 @@
     },
     "date": {
       "type": "date"
+    },
+    "description": {
+      "type": "text",
+      "required": false,
+      "maxLength": 160
     }
   }
 }
