--- a/api/jobs/models/jobs.settings.json
+++ b/api/jobs/models/jobs.settings.json
@@ -27,6 +27,10 @@
       "type": "richtext",
       "maxLength": 1000,
       "required": true
+    },
+    "user": {
+      "plugin": "users-permissions",
+      "model": "user"
     }
   }
 }
