--- a/api/job/models/job.settings.json
+++ b/api/job/models/job.settings.json
@@ -42,6 +42,10 @@
         "unbefristet",
         "befristet"
       ]
+    },
+    "slug": {
+      "type": "uid",
+      "targetField": "title"
     }
   }
 }
