--- a/api/footer-nav-items/models/footer-nav-items.settings.json
+++ b/api/footer-nav-items/models/footer-nav-items.settings.json
@@ -13,8 +13,7 @@
       "type": "string"
     },
     "slug": {
-      "type": "uid",
-      "targetField": "name"
+      "type": "string"
     }
   }
 }
