status for jobs

--- a/api/job/models/job.settings.json
+++ b/api/job/models/job.settings.json
@@ -56,6 +56,13 @@
     },
     "applicationLink": {
       "type": "string"
+    },
+    "status": {
+      "type": "enumeration",
+      "enum": [
+        "published",
+        "draft"
+      ]
     }
   }
 }
