--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -20,8 +20,7 @@
     },
     "excerpt": {
       "type": "richtext",
-      "required": true,
-      "maxLength": 160
+      "required": true
     },
     "date": {
       "type": "date",
