--- a/api/job/models/job.settings.json
+++ b/api/job/models/job.settings.json
@@ -64,6 +64,13 @@
         "draft"
       ],
       "default": "draft"
+    },
+    "premium": {
+      "type": "enumeration",
+      "enum": [
+        "yes",
+        "no"
+      ]
     }
   }
 }
