--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -19,7 +19,7 @@
       "minLength": 200
     },
     "excerpt": {
-      "type": "richtext",
+      "type": "text",
       "required": true
     },
     "date": {
