--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -71,6 +71,9 @@
       "type": "component",
       "repeatable": true,
       "component": "socials.author-socials"
+    },
+    "subscriber": {
+      "type": "boolean"
     }
   }
 }
