--- a/extensions/upload/config/settings.json
+++ b/extensions/upload/config/settings.json
@@ -34,7 +34,7 @@
           "isGenerateWebp": true,
         },
         {
-          "name: "medium",
+          "name": "medium",
           "resizeOptions": {
             "width": 550,
             "height": 200,
