--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "axios": "0.20.0",
     "knex": "<0.20.0",
     "pg": "^8.3.3",
     "sharp": "^0.26.0",
