--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -53,8 +53,8 @@
       ]
     },
     "tags": {
-      "collection": "tag",
-      "via": "posts"
+      "via": "posts",
+      "collection": "tag"
     },
     "user": {
       "plugin": "users-permissions",
