--- a/api/tag/models/tag.settings.json
+++ b/api/tag/models/tag.settings.json
@@ -26,14 +26,17 @@
       "unique": true
     },
     "posts": {
-      "via": "tags",
       "collection": "post",
+      "via": "tags",
       "dominant": true
     },
     "slug": {
       "type": "uid",
       "targetField": "name",
       "required": true
+    },
+    "backgroundColor": {
+      "type": "string"
     }
   }
 }
