--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "strapi": "3.4.6",
     "strapi-admin": "3.4.6",
     "strapi-connector-bookshelf": "3.4.6",
+    "strapi-plugin-comments": "^1.0.1-beta.6",
     "strapi-plugin-content-manager": "3.4.6",
     "strapi-plugin-content-type-builder": "3.4.6",
     "strapi-plugin-email": "3.4.6",
