--- a/api/config/models/config.settings.json
+++ b/api/config/models/config.settings.json
@@ -2,11 +2,13 @@
   "kind": "singleType",
   "collectionName": "configs",
   "info": {
-    "name": "Config"
+    "name": "Config",
+    "description": ""
   },
   "options": {
     "increments": true,
-    "timestamps": true
+    "timestamps": true,
+    "draftAndPublish": false
   },
   "attributes": {
     "siteTitle": {
@@ -51,11 +53,6 @@
     "loading": {
       "type": "string"
     },
-    "socials": {
-      "type": "component",
-      "repeatable": true,
-      "component": "socials.author-socials"
-    },
     "siteLogo": {
       "model": "file",
       "via": "related",
@@ -66,6 +63,18 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "github": {
+      "type": "string"
+    },
+    "twitter": {
+      "type": "string"
+    },
+    "linkedin": {
+      "type": "string"
+    },
+    "instagram": {
+      "type": "string"
     }
   }
 }
