--- a/api/tag/models/tag.settings.json
+++ b/api/tag/models/tag.settings.json
@@ -37,6 +37,14 @@
     },
     "backgroundColor": {
       "type": "string"
+    },
+    "tag": {
+      "via": "tags",
+      "model": "links"
+    },
+    "note": {
+      "via": "tags",
+      "model": "notes"
     }
   }
 }
