--- a/api/about/models/about.settings.json
+++ b/api/about/models/about.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "abouts",
   "info": {
-    "name": "About"
+    "name": "About",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -30,10 +31,10 @@
     "bioShort": {
       "type": "richtext"
     },
-    "bioMedium": {
-      "type": "string"
-    },
     "bioLong": {
+      "type": "richtext"
+    },
+    "bioMedium": {
       "type": "richtext"
     }
   }
