--- a/api/notes/models/notes.settings.json
+++ b/api/notes/models/notes.settings.json
@@ -70,6 +70,12 @@
     },
     "ofUrl": {
       "type": "string"
+    },
+    "syndLinkInstagram": {
+      "type": "string"
+    },
+    "syndLinkTwitter": {
+      "type": "string"
     }
   }
 }
