--- a/api/notes/models/notes.settings.json
+++ b/api/notes/models/notes.settings.json
@@ -62,7 +62,7 @@
       "component": "links.nav-items"
     },
     "coverMedium": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "allowedTypes": [
         "files",
