--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "0.20.0",
     "knex": "<0.20.0",
+    "node-fetch": "^2.6.1",
     "pg": "^8.3.3",
     "sharp": "^0.26.0",
     "strapi": "3.4.6",
