--- a/api/notes/models/notes.settings.json
+++ b/api/notes/models/notes.settings.json
@@ -46,7 +46,7 @@
       "component": "links.nav-items"
     },
     "coverMedium": {
-      "model": "file",
+      "collection": "file",
       "via": "related",
       "allowedTypes": [
         "files",
