--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "axios": "0.20.0",
+    "axios": "^0.21.1",
     "knex": "<0.20.0",
     "node-fetch": "^2.6.1",
     "pg": "^8.3.3",
