--- a/api/locationstest/models/locationstest.settings.json
+++ b/api/locationstest/models/locationstest.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "locationstests",
   "info": {
-    "name": "locationstest"
+    "name": "locationstest",
+    "description": ""
   },
   "options": {
     "increments": true,
