--- a/api/locations/models/locations.settings.json
+++ b/api/locations/models/locations.settings.json
@@ -2,7 +2,7 @@
   "kind": "collectionType",
   "collectionName": "locations",
   "info": {
-    "name": "Locations",
+    "name": "locations",
     "description": ""
   },
   "options": {
@@ -11,47 +11,8 @@
     "draftAndPublish": false
   },
   "attributes": {
-    "altitude": {
-      "type": "integer"
-    },
-    "batt": {
-      "type": "integer"
-    },
-    "bs": {
-      "type": "integer"
-    },
-    "lat": {
-      "type": "float"
-    },
-    "lon": {
-      "type": "float"
-    },
-    "rad": {
-      "type": "integer"
-    },
-    "trigger": {
-      "type": "string"
-    },
-    "tid": {
-      "type": "string"
-    },
-    "vel": {
-      "type": "integer"
-    },
-    "conn": {
-      "type": "string"
-    },
-    "topic": {
-      "type": "string"
-    },
-    "inregions": {
-      "type": "string"
-    },
-    "SSID": {
-      "type": "string"
-    },
-    "BSSID": {
-      "type": "string"
+    "locations": {
+      "type": "json"
     }
   }
 }
