--- a/api/locations/models/locations.settings.json
+++ b/api/locations/models/locations.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "locations",
   "info": {
-    "name": "locations"
+    "name": "locations",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -40,9 +41,6 @@
     "tid": {
       "type": "string"
     },
-    "tst": {
-      "type": "string"
-    },
     "vac": {
       "type": "integer"
     },
@@ -66,6 +64,9 @@
     },
     "bssid": {
       "type": "string"
+    },
+    "tst": {
+      "type": "integer"
     }
   }
 }
