--- a/api/recipes/models/recipes.settings.json
+++ b/api/recipes/models/recipes.settings.json
@@ -38,6 +38,10 @@
       ],
       "plugin": "upload",
       "required": false
+    },
+    "slug": {
+      "type": "uid",
+      "targetField": "title"
     }
   }
 }
