--- a/api/notes/models/notes.settings.json
+++ b/api/notes/models/notes.settings.json
@@ -25,8 +25,8 @@
       "targetField": "title"
     },
     "tags": {
-      "collection": "tag",
-      "via": "note"
+      "via": "note",
+      "collection": "tag"
     },
     "publishOnTwitter": {
       "type": "boolean"
