--- a/api/tag/models/tag.settings.json
+++ b/api/tag/models/tag.settings.json
@@ -47,8 +47,8 @@
       "via": "tags"
     },
     "note": {
-      "model": "notes",
-      "via": "tags"
+      "via": "tags",
+      "model": "notes"
     }
   }
 }
