--- a/api/tag/models/tag.settings.json
+++ b/api/tag/models/tag.settings.json
@@ -28,8 +28,8 @@
       "unique": false
     },
     "posts": {
-      "collection": "post",
       "via": "tags",
+      "collection": "post",
       "dominant": true
     },
     "slug": {
@@ -43,8 +43,8 @@
       "required": false
     },
     "tag": {
-      "model": "links",
-      "via": "tags"
+      "via": "tags",
+      "model": "links"
     },
     "note": {
       "via": "tags",
