--- a/api/cv/models/cv.settings.json
+++ b/api/cv/models/cv.settings.json
@@ -34,6 +34,11 @@
       "type": "component",
       "repeatable": true,
       "component": "cv.timeline"
+    },
+    "interests": {
+      "type": "component",
+      "repeatable": true,
+      "component": "cv.interests"
     }
   }
 }
