--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "axios": "^0.21.1",
+    "garmin-connect": "^1.3.0",
     "knex": "<0.20.0",
     "node-fetch": "^2.6.1",
     "pg": "^8.3.3",
