--- a/api/activity/models/activity.settings.json
+++ b/api/activity/models/activity.settings.json
@@ -24,13 +24,13 @@
       "type": "float"
     },
     "duration": {
-      "type": "integer"
+      "type": "biginteger"
     },
     "elapsedDuration": {
-      "type": "integer"
+      "type": "biginteger"
     },
     "movingDuration": {
-      "type": "integer"
+      "type": "biginteger"
     },
     "elevationGain": {
       "type": "float"
