--- a/api/activity/models/activity.settings.json
+++ b/api/activity/models/activity.settings.json
@@ -11,7 +11,7 @@
     "draftAndPublish": false
   },
   "attributes": {
-    "activityID": {
+    "activityId": {
       "type": "float"
     },
     "activityName": {
