--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -61,6 +61,12 @@
       "type": "component",
       "repeatable": true,
       "component": "links.nav-items"
+    },
+    "positive_feedback_count": {
+      "type": "integer"
+    },
+    "negative_feedback_count": {
+      "type": "integer"
     }
   }
 }
