--- a/api/post/models/post.settings.json
+++ b/api/post/models/post.settings.json
@@ -65,7 +65,7 @@
       "default": 0
     },
     "coverImage": {
-      "collection": "file",
+      "model": "file",
       "via": "related",
       "allowedTypes": [
         "images",
