--- a/api/tag/models/tag.settings.json
+++ b/api/tag/models/tag.settings.json
@@ -49,6 +49,10 @@
     "note": {
       "via": "tags",
       "model": "notes"
+    },
+    "photo": {
+      "via": "tags",
+      "model": "photos"
     }
   }
 }
